--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,6 @@ authors = ["Leorik <Kardashoff@gmail.com>"]
 [dependencies]
 hyper = "0.10.9"
 serde = "1.0.2"
+serde_json = "1.0.1"
+
+serde_derive = "1.0.2"
