--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Leorik <Kardashoff@gmail.com>"]
 
 [dependencies]
 hyper = "0.10.9"
+hyper-native-tls = "0.2.2"
 serde = "1.0.2"
 serde_json = "1.0.1"
-
 serde_derive = "1.0.2"
